--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,7 +8,7 @@ and I will try to get back to you within 24 hours!</p>
 <div class="row control-group">
    <div class="form-group col-xs-12 floating-label-form-group controls">
  <form  method="POST"  > 
-<input type="text" class="form-control" placeholder="Type anything here to see form" id="Type anything here to see form" required data-validation-required-message="Please enter your title.">
+<input type="text" class="form-control" placeholder="Type anything here, and then proceed" id="Type anything here, and then proceed" required data-validation-required-message="Please enter your title.">
             <p class="help-block text-danger"></p>
   {% csrf_token %} 
   {{ form.as_p }}
@@ -18,7 +18,7 @@ and I will try to get back to you within 24 hours!</p>
 <div id="success"></div>
 <div class="row">
 <div class="form-group col-xs-12">
-    <button type="submit" class="btn btn-default">Save</button>
+    <button type="submit" class="btn btn-default">Send</button>
 </div>
 </div>
 </form>
