--- a/templates/indexbase.html
+++ b/templates/indexbase.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Clean Blog</title>
+    <title>Maiagogo - {% block title %}Blog!{% endblock %}</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="{% static 'style/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" media="screen">
@@ -44,7 +44,7 @@
                     <span class="sr-only">Toggle navigation</span>
                     Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="index.html">Ammar Bello</a>
+                <a class="navbar-brand" href="index.html">MAIAGOGO</a>
                 <a class="navbar-brand" href="/maiagogo/post/new/"><span class="glyphicon glyphicon-plus"></span></a>
               
             </div>
@@ -64,12 +64,14 @@
                     <li>
                         <a href="/maiagogo/contact/">Contact</a>
                     </li>
-                    <li>
-                        <a  href="/maiagogo/register/">Register</a>
-                    </li>
- 		    <li>
-                        <a  href="/maiagogo/user_login/">Login</a>
-                    </li>
+
+                     {% if user.is_authenticated %} 
+                     <li ><a href="#">Welcome, {{ user.username }}!</a></li> 
+                     <li ><a href="/maiagogo/user_logout/">Logout</a></li> 
+                     {% else %} 
+                     <li><a href="/maiagogo/register/">Register</a></li> 
+                     <li><a href="/maiagogo/user_login/">Login</a></li>
+                     {% endif %} 
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -102,11 +104,15 @@
 
                {% endblock %}
                 <!-- Pager -->
+               
+                  {% block pager_block %}
                 <ul class="pager">
                     <li class="next">
                         <a href="#">Older Posts &rarr;</a>
                     </li>
-                </ul>
+               
+                   </ul>
+               {% endblock %}
             </div>
         </div>
     </div>
