added updated templates

--- a/statics/style/css/clean-blog.css
+++ b/statics/style/css/clean-blog.css
@@ -292,7 +292,7 @@ footer .copyright {
   position: relative;
   margin-bottom: 0;
   padding-bottom: 0.5em;
-  border-bottom: 1px solid #eeeeee;
+  border-bottom: 5px solid #000000;
 }
 .floating-label-form-group input,
 .floating-label-form-group textarea {
